# fastapi-template

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  TODO.md  cookiecutter.json  index.html  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: latest-changes.yaml  test.yaml  test.yml
docs/: mkdocs.yml
examples/: Makefile
examples/simple/: config.yaml
examples/simple/simple-project/: pyproject.toml  setup.cfg
examples/simple/simple-project/simple_project/: main.py
examples/simple/simple-project/simple_project/api/: __init__.py
examples/simple/simple-project/simple_project/api/v1/: __init__.py
examples/simple/simple-project/tests/: conftest.py
fastapi_boilerplate/: constants.py  main.py
hooks/: post_gen_project.py  pre_gen_project.py
hub/: templates.yaml
search/: search_index.json
tests/: conftest.py  test_cookiecutter.py  test_simple.py  utils.py
tests/resources/docker/: config.yaml
tests/resources/docker/docker-project/: .env  Dockerfile  Makefile  pyproject.toml  setup.cfg
tests/resources/docker/docker-project/docker_project/: main.py
tests/resources/docker/docker-project/docker_project/api/: __init__.py
tests/resources/docker/docker-project/docker_project/api/v1/: __init__.py
tests/resources/docker/docker-project/docker_project/core/: config.py
tests/resources/docker/docker-project/scripts/: start.sh
tests/resources/docker/docker-project/tests/: conftest.py
tests/resources/postgres/: config.yaml
tests/resources/postgres-docker/: config.yaml
tests/resources/postgres-docker/postgres-docker-project/: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
tests/resources/postgres-docker/postgres-docker-project/postgres_docker_project/: main.py
tests/resources/postgres-docker/postgres-docker-project/postgres_docker_project/api/: __init__.py
tests/resources/postgres-docker/postgres-docker-project/postgres_docker_project/api/v1/: __init__.py
tests/resources/postgres-docker/postgres-docker-project/postgres_docker_project/core/: database.py
tests/resources/postgres-docker/postgres-docker-project/scripts/: start.sh  wait_database.py
tests/resources/postgres-docker/postgres-docker-project/tests/: conftest.py
tests/resources/postgres/postgres-project/: .env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
tests/resources/postgres/postgres-project/postgres_project/: main.py
tests/resources/postgres/postgres-project/postgres_project/api/: __init__.py
tests/resources/postgres/postgres-project/postgres_project/api/v1/: __init__.py
tests/resources/postgres/postgres-project/postgres_project/core/: config.py  database.py
tests/resources/postgres/postgres-project/scripts/: start.sh  wait_database.py
tests/resources/postgres/postgres-project/tests/: conftest.py
tests/resources/simple/: config.yaml
tests/resources/simple/simple-project/: .env  .gitignore  Makefile  pyproject.toml  setup.cfg
tests/resources/simple/simple-project/tests/: conftest.py
{{ cookiecutter.project_slug }}/: .env  Dockerfile  Makefile  client-config.yaml  dev_requirements.txt  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
{{ cookiecutter.project_slug }}/app/api/v1/: home.py
{{ cookiecutter.project_slug }}/docs/: mkdocs.yml
{{ cookiecutter.project_slug }}/scripts/: start.sh  wait_database.py
{{ cookiecutter.project_slug }}/tests/: conftest.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __main__.py  main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/api/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/api/v1/: __init__.py  home.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/core/: config.py  database.py
