[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
packages = [{ include = "fastapi_boilerplate" }]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-sugar = "^0.9.4"
uvicorn = { extras = ["standard"], version = "^0.13.4" }
fastapi = { extras = ["all"], version = "^0.63.0" }
httpx = "^0.17.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
