[tool.poetry]
name = "app"
version = "0.1.0"
description = "An amazing FastAPI project!"
readme = "README.md"
authors = ["Default Name <default@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
