[tool.poetry]
name = "simple_project"
version = "0.1.0"
description = "An amazing FastAPI project!"
authors = ["Default Name <default@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = { extras = ["standard"], version = "^0.13.4" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-sugar = "^0.9.4"
httpx = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
